[project]
name = "sam2"
version = "2.1.1"
description = "support uv virtual environemnt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pip>=24.3.1",
    "torch>=2.3.1",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
]
license = { text = "Apache 2.0" }

[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.3.1",
]
build-backend = "setuptools.build_meta"
